<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_name"
                android:id="@+id/tv_test_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_topic"
                android:text="@string/topic"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_duration"
                android:text="@string/duration"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_qb_id"
                android:text="@string/qb_id"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
               <Button
                    android:id="@+id/btn_start_stop"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/start_stop"
                    />
                <Button
                    android:id="@+id/btn_edit_test"
                    android:layout_marginStart="60dp"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
