<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.deepanshu.quiz.Add_Questions">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_enterQuestion"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:inputType="textMultiLine"
                tools:layout_editor_absoluteX="42dp"
                tools:layout_editor_absoluteY="30dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:hint="@string/enter_your_question"
                android:scrollbars="vertical"
                />

            <EditText
                android:id="@+id/et_optionA"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/option_a"
                android:layout_below="@+id/et_enterQuestion"
                android:layout_alignStart="@+id/et_enterQuestion" />

            <EditText
                android:id="@+id/et_optionB"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/option_b"
                android:layout_below="@+id/et_optionA"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                />

            <EditText
                android:id="@+id/et_optionC"
                android:layout_width="300dp"
                android:layout_height="wrap_content"

                android:layout_alignStart="@+id/et_optionB"
                android:layout_below="@+id/et_optionB"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/option_c" />

            <EditText
                android:id="@+id/et_optionD"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/et_optionC"
                android:layout_below="@+id/et_optionC"
                android:layout_marginBottom="30dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/option_d" />

            <TextView
                android:id="@+id/tv_correctOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:textSize="20sp"
                android:text="@string/select_correct_option"
                tools:text="Select correct option :"
                android:layout_below="@+id/et_optionD"
                android:layout_alignStart="@+id/et_optionD" />

            <Spinner
                android:id="@+id/spinner_selectOption"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tv_correctOption"
                android:layout_alignEnd="@+id/et_optionD" />
        </RelativeLayout>
    </ScrollView>


    <Button
        android:id="@+id/btn_add_question"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/scrollView"
         />

    <Button
        android:id="@+id/btn_cancel_question"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_add_question"
        android:layout_centerHorizontal="true"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/btn_submitquestionbnk"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/scrollView"
        android:layout_alignTop="@+id/btn_cancel_question"
        android:layout_marginEnd="20dp"
        android:text="@string/submit" />


</RelativeLayout>
