<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.deepanshu.quiz.Question">

    <TextView
        android:id="@+id/tx_timed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="40dp"
        android:layout_marginTop="12dp"
        android:textSize="20dp" />

    <ScrollView
        android:id="@+id/question_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tx_timed"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_ques"
                android:layout_width="300dp"
                android:layout_height="110dp"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/rg_options"
                android:layout_marginTop="30dp"
                android:fontFamily="serif"
                android:text="@string/question"
                android:textSize="25sp" />

            <RadioGroup
                android:id="@+id/rg_options"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_ques"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp">

                <RadioButton
                    android:id="@+id/rb_opA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/option_a"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rb_opB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="serif"
                    android:text="@string/option_b"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rb_opC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="serif"
                    android:text="@string/option_c"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rb_opD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="serif"
                    android:text="@string/option_d"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rb_no"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="@string/no" />


            </RadioGroup>

            <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rg_options"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="40dp"
                android:text="@string/next" />
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
