<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/black"
    tools:context="com.deepanshu.quiz.Register">

    <android.support.v7.widget.CardView
        android:id="@+id/register_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/colorPrimary"
        android:padding="20dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etname"
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/etemail"
                    android:layout_marginTop="25dp"
                    android:ems="10"
                    android:hint="@string/name_hint"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/etusername"
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/etname"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:ems="10"
                    android:hint="@string/unique_username"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/etemail"
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/etusername"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/etpass"
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/etemail"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="25dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword" />


            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/register_card"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/register"
        android:textSize="18sp" />

</RelativeLayout>
