<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.deepanshu.quiz.StartTest">

   <ScrollView
       android:id="@+id/start_test_scroll_view"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:scrollbars="vertical">
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               android:id="@+id/tv_1"
               android:layout_width="300dp"
               android:layout_height="wrap_content"
               android:layout_alignParentTop="true"
               android:layout_centerHorizontal="true"
               android:fontFamily="serif"
               android:text="@string/test_details"
               android:textSize="30sp"
               android:textColor="#000"
               android:textAlignment="center"
               android:layout_marginTop="18dp" />

           <LinearLayout
               android:id="@+id/linearLayoutDetails"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_marginTop="18dp"
               android:layout_below="@+id/tv_1">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="13dp"
                   android:orientation="horizontal"
                   android:id="@+id/linearLayout">

                   <TextView
                       android:id="@+id/tv_2"
                       android:layout_width="120dp"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:fontFamily="serif"
                       android:text="@string/name" />

                   <TextView
                       android:id="@+id/tv_test_name"
                       android:fontFamily="serif"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"/>
               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="13dp"
                   android:id="@+id/linearLayout_2"
                   android:orientation="horizontal">

                   <TextView
                       android:id="@+id/tv_3"
                       android:layout_width="120dp"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:fontFamily="serif"
                       android:text="@string/topic" />

                   <TextView
                       android:id="@+id/tv_test_topic"
                       android:layout_width="wrap_content"
                       android:textSize="18sp"
                       android:fontFamily="serif"
                       android:layout_height="wrap_content"/>
               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="13dp"
                   android:id="@+id/linearLayout_3"
                   android:orientation="horizontal">

                   <TextView
                       android:id="@+id/tv_4"
                       android:layout_width="120dp"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:fontFamily="serif"
                       android:text="@string/duration" />

                   <TextView
                       android:id="@+id/tv_test_duration"
                       android:layout_width="wrap_content"
                       android:textSize="18sp"
                       android:fontFamily="serif"
                       android:layout_height="wrap_content" />
               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="13dp"
                   android:id="@+id/linearLayout_4"
                   android:orientation="horizontal">

                   <TextView
                       android:id="@+id/tv_5"
                       android:layout_width="120dp"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:fontFamily="serif"
                       android:text="@string/author" />

                   <TextView
                       android:id="@+id/tv_author"
                       android:layout_width="wrap_content"
                       android:textSize="18sp"
                       android:fontFamily="serif"
                       android:layout_height="wrap_content" />
               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="13dp"
                   android:id="@+id/linearLayout_5"
                   android:orientation="horizontal">

                   <TextView
                       android:id="@+id/tv_6"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:fontFamily="serif"
                       android:text="@string/marking_scheme" />
               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="13dp"
                   android:id="@+id/linearLayout_6"
                   android:orientation="horizontal">

                   <TextView
                       android:id="@+id/tv_7"
                       android:layout_width="120dp"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:fontFamily="serif"
                       android:text="@string/positive" />

                   <TextView
                       android:id="@+id/tv_posMarks"
                       android:layout_width="wrap_content"
                       android:textSize="18sp"
                       android:fontFamily="serif"
                       android:layout_height="wrap_content" />
               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="13dp"
                   android:id="@+id/linearLayout_7"
                   android:orientation="horizontal">

                   <TextView
                       android:id="@+id/tv_8"
                       android:layout_width="120dp"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:fontFamily="serif"
                       android:text="@string/negative" />

                   <TextView
                       android:id="@+id/tv_negMarks"
                       android:layout_width="wrap_content"
                       android:textSize="18sp"
                       android:fontFamily="serif"
                       android:layout_height="wrap_content"/>
               </LinearLayout>
           </LinearLayout>

       </RelativeLayout>
   </ScrollView>
    <Button
        android:layout_width="150dp"
        android:id="@+id/btn_start_test"
        android:layout_height="50dp"
        android:background="#ff0000"
        android:fontFamily="serif"
        android:text="@string/start"
        android:layout_below="@+id/start_test_scroll_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

</RelativeLayout>
