<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/black"
    tools:context="com.deepanshu.quiz.UserActivity">

    <Button
        android:id="@+id/switch_to_admin"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/cardview_dark_background"
        android:text="Admin"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/user_btn"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/black"
        android:text="User"
        android:textColor="@android:color/white" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch_to_admin"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/colorPrimary">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            app:cardBackgroundColor="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_test_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/attempt_test"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

                <EditText
                    android:id="@+id/et_testid"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/enter_test_id" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">


                    <Button
                        android:id="@+id/btn_start"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/start" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btn_viewMyResult"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/results" />


</RelativeLayout>
